gccida/c1/want_to_gcse_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1784:29: error: use of undeclared identifier 'machine_mode'
if ( !general_operand( x, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)) ) 
                            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1784:44: error: expected expression
if ( !general_operand( x, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)x)) ) 
                                           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1789:7: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
if ( !want_to_gcse_p_test_insn ) 
      ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1791:30: error: invalid suffix 'xmode' on integer constant
v4 = gen_rtx_REG( *(short *)0xmode, 106); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1793:1: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
want_to_gcse_p_test_insn = make_insn_raw( v5); 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1794:1: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
want_to_gcse_p_test_insn[1] = 0LL; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1795:20: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
ggc_add_rtx_root( &want_to_gcse_p_test_insn, 1); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1797:41: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
*( _BYTE *)( *( _QWORD *)( *( _QWORD *)&want_to_gcse_p_test_insn[2] + 8LL) + 2LL) = *( ( _BYTE *)x + 2); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1798:6: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
v6 = want_to_gcse_p_test_insn; 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/gcse.c:1799:28: error: use of undeclared identifier 'want_to_gcse_p_test_insn'
*( _QWORD *)( *( _QWORD *)&want_to_gcse_p_test_insn[2] + 16LL) = x; 
                           ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/want_to_gcse_p/src/obj/gcse.o] Error 1
